--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,44 @@
+* {
+    font-family: monospace;
+}
+div.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    margin: auto;
+    padding: 1rem;
+    border: 1px solid rgb(0, 110, 178);
+    border-radius: 30px;
+}
+
+/* style for main heading  */
+h1 {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#color-red {
+    color: red;
+}
+
+form.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+div.output {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Adding some basic styling to button */ 
-          
 .btn { 
     text-decoration: none; 
     border: none; 
@@ -15,7 +54,6 @@
     transition: 0.2s all; 
 } 
 /* Adding transformation when the button is active */ 
-  
 .btn:active, #copy:active { 
     transform: scale(0.98); 
     /* Scaling button to 0.98 to its original size */ 
@@ -23,6 +61,8 @@
     /* Lowering the shadow */ 
 } 
 
+
+/* Adding some basic styling to input */
 .input {
     border-radius: 50px;
     padding: 8px 20px;
@@ -33,44 +73,35 @@
     /* text-align: center; */
 }
 
+/* Style of conversion name in output */
 span#conversion-name {
     font-weight: 700;
     font-size: 20px;
     font-family: monospace;
 }
 
-div.content {
-    border: 1px solid black;
-    width: 90%;
-    margin: auto;
-    padding: 1rem;
-    border: 1px solid rgb(0, 110, 178);
-    border-radius: 30px;
-}
-
-h1 {
-    text-align: center;
-    font-family: monospace;
-}
-
+/* addition style for output-value input */
 #output-value {
     /* height: 40vh;
     width: 80%; */
-    
     overflow: hidden;
     border-radius: 30px;
 }
 
+/* style for copy input type button */
 #copy {
     padding: 5px;
-    /* position: relative;
-    top: 2rem;
-    right: 2rem; */
     background-color: rgb(0, 110, 178);
     color: white;
     transition: 0.2s all;
+    margin: 0.4rem;
 }
 
-#color-red {
-    color: red;
+
+/* Only for small phones  */
+@media (max-width: 400px) {
+    div.output {
+        flex-direction: column;
+        margin: 0.1rem;
+    }
 }
