--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@ div.content {
     margin: auto;
     padding: 1rem;
     border: 1px solid rgb(0, 110, 178);
-    border-radius: 30px;
+    border-radius: 15px;
+    background-color: rgba(31, 207, 255, 1);
 }
 
 /* style for main heading  */
@@ -42,12 +43,13 @@ div.output {
 .btn { 
     text-decoration: none; 
     border: none; 
-    padding: 8px 20px; 
+    /* border-color: rgb(255, 115, 0); */
+    padding: 8x 20px; 
     margin: 0.5rem;
     font-size: 16px; 
-    background-color: rgb(0, 110, 178); 
-    color: #fff; 
-    border-radius: 50px; 
+    background-color: rgb(255, 115, 0); 
+    color: rgb(255, 255, 255); 
+    border-radius: 3px; 
     /* box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);  */
     cursor: pointer; 
     outline: none; 
@@ -61,12 +63,17 @@ div.output {
     /* Lowering the shadow */ 
 } 
 
+select#methods {
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 3px rgb(0, 78, 111);
+}
 
 /* Adding some basic styling to input */
 .input {
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 8px 20px;
-    border: 1px solid rgb(0, 110, 178);
+    border: 1px solid rgb(0, 0, 0);
+    border: none;
     color: rgb(37, 37, 37);
     font-weight: 600;
     outline: none;
@@ -74,7 +81,7 @@ div.output {
 }
 
 /* Style of conversion name in output */
-span#conversion-name {
+span#conversion-name, span#enter-number {
     font-weight: 700;
     font-size: 20px;
     font-family: monospace;
@@ -82,17 +89,19 @@ span#conversion-name {
 
 /* addition style for output-value input */
 #output-value {
-    /* height: 40vh;
-    width: 80%; */
+    height: 100px;
+    /* width: 80%; */
     overflow: hidden;
-    border-radius: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(255, 255, 255);
 }
 
 /* style for copy input type button */
 #copy {
     padding: 5px;
-    background-color: rgb(0, 110, 178);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     transition: 0.2s all;
     margin: 0.4rem;
 }
@@ -103,5 +112,8 @@ span#conversion-name {
     div.output {
         flex-direction: column;
         margin: 0.1rem;
+    }
+    input#output-value {
+        margin-top: 1rem;
     }
 }
