--- a/style/style.css
+++ b/style/style.css
@@ -63,16 +63,15 @@ div.output {
     /* Lowering the shadow */ 
 } 
 
-select#methods {
+select#methods, #input-value {
     /* border: 1px solid black; */
     box-shadow: 0px 0px 3px rgb(0, 78, 111);
 }
 
 /* Adding some basic styling to input */
 .input {
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 8px 20px;
-    border: 1px solid rgb(0, 0, 0);
     border: none;
     color: rgb(37, 37, 37);
     font-weight: 600;
@@ -90,7 +89,7 @@ span#conversion-name, span#enter-number {
 /* addition style for output-value input */
 #output-value {
     height: 100px;
-    /* width: 80%; */
+    /* width: 100%; */
     overflow: hidden;
     border-radius: 5px;
     border: none;
@@ -100,10 +99,21 @@ span#conversion-name, span#enter-number {
 /* style for copy input type button */
 #copy {
     padding: 5px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    align-self: flex-start;
+    background-color: rgb(255, 115, 0);
+    color: rgb(255, 255, 255);
     transition: 0.2s all;
-    margin: 0.4rem;
+    /* border-radius: 3px; */
+    border-top-right-radius: 3px;
+    /* margin: 0.4rem; */
+}
+
+div#output-value-wrapper {
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
 }
 
 
@@ -113,7 +123,11 @@ span#conversion-name, span#enter-number {
         flex-direction: column;
         margin: 0.1rem;
     }
-    input#output-value {
+    div#output-value-wrapper {
+        flex-direction: column;
         margin-top: 1rem;
+    }
+    button#copy {
+        align-self: flex-end;        
     }
 }
