--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,30 @@
 * {
 
     font-family: monospace;
-    font-size: 16px; 
+    /* font-size: 16px; */
+    box-sizing: border-box;
+    overflow: visible;
 }
-html {
+
+body {
+    background-color: rgb(248, 248, 248);
     margin: 0;
     padding: 0;
 }
-body {
-    background-color: rgb(144, 225, 255);
+
+nav#top-nav {
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid black; */
+    margin-bottom: 1rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 5px grey;
 }
+h1.brand {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 1rem;
+}
+
 div.content {
     display: flex;
     justify-content: center;
@@ -18,10 +33,10 @@ div.content {
     width: 50%;
     margin: auto;
     padding: 1rem;
-    /* border: 1px solid rgb(0, 110, 178); */
-    border-radius: 15px;
+    /* border: 1px solid rgb(39, 39, 39); */
+    /* border-radius: 4px; */
     /* background-color: rgba(31, 207, 255, 1); */
-    background-color: rgb(16, 255, 112);
+    background-color: rgb(235, 235, 235);
 }
 
 .display-flex {
@@ -33,7 +48,7 @@ h1 {
     font-family: 'Courier New', Courier, monospace;
 }
 
-#color-red {
+p#color-red {
     color: red;
     font-family: cursive;
 }
@@ -45,11 +60,7 @@ form.form {
 
 }
 
-#input-value {
-    margin-top: 1rem;
-}
-
-div.output {
+div.output, div.input-value {
     /* border: 1px solid black; */
     justify-content: center;
     align-items: center;
@@ -58,18 +69,20 @@ div.output {
 /* Adding some basic styling to button */ 
 .btn { 
     text-decoration: none; 
-    border: none; 
+    border: 1px solid rgb(48, 48, 48); 
     padding: 8x 20px; 
     margin: 0.5rem;
-    background-color: rgb(255, 115, 0); 
-    color: rgb(255, 255, 255); 
-    border-radius: 3px; 
-    cursor: pointer; 
-    cursor: pointer; 
+    background-color: rgb(248, 248, 248);
+    color: rgb(2, 2, 2); 
+    border-radius: 0px; 
     cursor: pointer; 
     outline: none; 
     transition: 0.1s all; 
 } 
+.btn:hover, #copy:hover {
+    background-color: rgb(9, 161, 255);
+    color: rgb(255, 255, 255);
+}
 /* Adding transformation when the button is active */ 
 .btn:active, #copy:active { 
     transform: scale(0.98); 
@@ -78,11 +91,7 @@ div.output {
     /* Lowering the shadow */ 
 } 
 
-.shadow {
-    box-shadow: 0px 0px 1px rgb(31, 31, 31);
-}
-
-/* Adding some basic styling to input */
+/* Adding some basic styling to input boxes */
 .input {
     padding: 8px 20px;
     border: none;
@@ -109,30 +118,28 @@ span#conversion-name, span#enter-number {
 
 /* style for copy input type button */
 #copy {
-    padding: 5px;
+    padding: 1px 6px;
+    border: 1px solid rgb(48, 48, 48); 
     align-self: flex-start;
-    background-color: rgb(255, 115, 0);
-    color: rgb(255, 255, 255);
-    border-top-right-radius: 3px;
-    border-bottom-left-radius: 3px;
+    background-color: rgb(248, 248, 248);
+    color: rgb(2, 2, 2);
+    cursor: pointer; 
     transition: 0.1s all;
 }
 
 div#output-value-wrapper {
-    /* border: 1px solid red; */
     justify-content: center;
     border-top-right-radius: 3px;
     align-items: center;
     background-color: white;
 }
 
-
 /* Only for small phones  */
-@media (max-width: 400px) {
+@media (max-width: 475px) {
     div.content {
         width: 90%;
     }
-    div.output {
+    div.output,div.input-value {
         flex-direction: column;
         margin: 0.1rem;
     }
@@ -140,15 +147,24 @@ div#output-value-wrapper {
         flex-direction: column-reverse;
         margin-top: 1rem;
     }
+    #input-value {
+        margin-top: 1rem;
+    }
     #copy {
         /* for top-right corner */
         align-self: flex-end;  
     }
-    
 }
 
-@media (min-width: 401px) and (max-width: 720px) {
+/* Only for tablet and landscape phones */
+@media (min-width: 476px) and (max-width: 720px) {
     div.content {
         width: 80%;
+    }
+}
+
+@media (min-width: 721px) {
+    div.content {
+        width: 70%;
     }
 }
